--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 nbformat>=5.0
 matplotlib>=3.5
+numpy>=1.23
 Pillow>=9.0
 Pygments>=2.10
 PyYAML>=6.0
 Markdown>=3.4
 unicodeit>=0.7
+ipykernel>=6.0
