--- a/example/example_config.yaml
+++ b/example/example_config.yaml
@@ -16,8 +16,11 @@ code:
 latex:
   font_size: 48           # font size for rendered LaTeX
   dpi: 150                # resolution of LaTeX images
-  color: "black"          # LaTeX text colour
-  background: "white"     # LaTeX image background
+  color: "white"          # LaTeX text colour
+  background: "#111111"     # LaTeX image background
   padding: 68             # vertical padding in pixels above and below each expression
   # image_width: 1920     # override the top-level image_width for LaTeX images only
   try_usetex: true        # use a full LaTeX install when available; falls back to mathtext
+  # preamble: |           # extra LaTeX preamble added to every formula (usetex only)
+  #   \usepackage{xcolor}
+  #   \definecolor{accent}{HTML}{E8C547}
