--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,10 @@ target/
 # Jupyter Notebook
 .ipynb_checkpoints
 
+# Quarto render artifacts
+*_files/
+*.html
+
 # IPython
 profile_default/
 ipython_config.py
