--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,3 +34,20 @@ nb2wb = "nb2wb.cli:main"
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["nb2wb*"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+markers = [
+    "latex: tests requiring LaTeX and dvipng installed",
+    "slow: slow tests (e.g., full workflow tests)",
+    "integration: integration tests",
+    "unit: unit tests",
+]
+addopts = [
+    "-v",
+    "--strict-markers",
+    "--tb=short",
+]
