--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,27 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "nb2wb"
 version = "0.1.0"
-description = "Convert Jupyter Notebooks to Substack-ready HTML"
+description = "Write in Jupyter Notebooks. Publish anywhere."
 readme = "README.md"
 requires-python = ">=3.9"
 license = {text = "MIT"}
+authors = [
+    {name = "Tivadar Danka"},
+]
 keywords = ["jupyter", "substack", "latex", "converter", "technical-writing"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Topic :: Text Processing :: Markup :: HTML",
+]
+
 dependencies = [
     # Notebook I/O and execution
     "nbformat>=5.0",
@@ -24,6 +40,11 @@ dependencies = [
     "markdown>=3.4",
     "unicodeit>=0.7",
 ]
+
+[project.urls]
+Homepage = "https://github.com/the-palindrome/nb2wb"
+Repository = "https://github.com/the-palindrome/nb2wb"
+Issues = "https://github.com/the-palindrome/nb2wb/issues"
 
 [project.optional-dependencies]
 dev = ["pytest>=7.0", "black", "isort"]
