--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "nb2wb"
-version = "0.1.3"
+version = "0.1.4"
 description = "Write in Jupyter Notebooks. Publish anywhere."
 readme = "README.md"
 requires-python = ">=3.9"
@@ -48,6 +48,11 @@ Issues = "https://github.com/the-palindrome/nb2wb/issues"
 
 [project.optional-dependencies]
 dev = ["pytest>=7.0", "black", "isort"]
+docs = [
+    "sphinx>=7.4",
+    "myst-parser>=2.0",
+    "furo>=2024.8.6",
+]
 
 [project.scripts]
 nb2wb = "nb2wb.cli:main"
